The proto udpates allow the correct USER ID to be selected. Additionally, css and html changes mean text is appropriately aligned at all sizes and with any number of roles.

--- a/portfolio/src/main/resources/static/css/stylesheet.css
+++ b/portfolio/src/main/resources/static/css/stylesheet.css
@@ -613,7 +613,6 @@
     font-family: nexaBold !important;
     font-size: 150% !important;
     color: #19DAFF !important;
-    padding-left: 30%;
     border: none;
     background: none;
     text-decoration: none !important;
